--- a/PagWeb/package.json
+++ b/PagWeb/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.15",
+    "classnames": "^2.3.2",
+    "flowbite": "^1.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
